Feat: Add room audit trail

--- a/WebApp/backend/QuizMaster.API.Monitoring/QuizMaster.API.Monitoring.csproj
+++ b/WebApp/backend/QuizMaster.API.Monitoring/QuizMaster.API.Monitoring.csproj
@@ -43,5 +43,6 @@
 		<Protobuf Include="Proto\monitoring.proto" GrpcServices="Server,Client" />
 		<Protobuf Include="Proto\quizmonitoring.proto" GrpcServices="Server,Client" />
 		<Protobuf Include="Proto\mediamonitoring.proto" GrpcServices="Server,Client" />
+		<Protobuf Include="Proto\roommonitoring.proto" GrpcServices="Server,Client" />
 	</ItemGroup>
 </Project>
