Ref: Ignored QuizSession.db and updated the QuizSession Appsettings.json

--- a/WebApp/backend/QuizMaster.API.QuizSession/appsettings.Development.json
+++ b/WebApp/backend/QuizMaster.API.QuizSession/appsettings.Development.json
@@ -11,6 +11,6 @@
     }
   },
   "ConnectionStrings": {
-    "QuizMasterQuizSessionDBConnectionString": "Data Source=QuizSession.db"
+    "QuizMasterQuizSessionDBConnectionString": "Data Source=sessionDb\\QuizSession.db"
   }
 }
