--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@ packages/
 /WebApp/backend/QuizMaster.API.Media/wwwroot/Images
 /WebApp/backend/QuizMaster.API.QuizSession/QuizSession.db
 /WebApp/backend/QuizMaster.API.QuizSession/QuizSession.db
+WebApp/backend/QuizMaster.API.QuizSession/sessionDb
