--- a/WebApp/frontend/quiz-master/package.json
+++ b/WebApp/frontend/quiz-master/package.json
@@ -17,6 +17,7 @@
         "@mantine/hooks": "^7.1.5",
         "@mantine/modals": "^7.1.5",
         "@mantine/notifications": "^7.2.2",
+        "@microsoft/signalr": "^8.0.0",
         "@mui/icons-material": "^5.14.18",
         "@types/node": "^20",
         "@types/react": "^18",
