--- a/WebApp/backend/QuizMaster.API.QuizSession/appsettings.Development.json
+++ b/WebApp/backend/QuizMaster.API.QuizSession/appsettings.Development.json
@@ -2,7 +2,8 @@
   "AppSettings": {
     "RabbitMq_Quiz_ExchangeName": "QuizMasterExchange_Quiz",
     "RabbitMq_Quiz_QuizInitQueue": "QuizMasterInitQueue_Quiz",
-    "RabbitMq_Hostname": "localhost"
+    "RabbitMq_Hostname": "localhost",
+    "Monitoring_Service": "https://localhost:7065"
   },
   "Logging": {
     "LogLevel": {
