--- a/.gitignore
+++ b/.gitignore
@@ -65,4 +65,5 @@ packages/
 /WebApp/backend/QuizMaster.API.Media/wwwroot/Images
 /WebApp/backend/QuizMaster.API.QuizSession/QuizSession.db
 /WebApp/backend/QuizMaster.API.QuizSession/QuizSession.db
+/WebApp/backend/QuizMaster.API.QuizSession/quizSession
 /WebApp/backend/QuizMaster.API.Gatewway/wwwroot/Images
