--- a/WebApp/frontend/quiz_session/package.json
+++ b/WebApp/frontend/quiz_session/package.json
@@ -12,6 +12,7 @@
     "@hello-pangea/dnd": "^16.5.0",
     "@mantine/core": "^7.3.2",
     "@mantine/hooks": "^7.3.2",
+    "@mantine/notifications": "^7.4.0",
     "@microsoft/signalr": "^8.0.0",
     "@tabler/icons": "^2.44.0",
     "@tabler/icons-react": "^2.44.0",
@@ -20,7 +21,9 @@
     "react": "^18",
     "react-audio-player": "^0.17.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
+    "react-use": "^17.4.2",
     "tailwind-scrollbar-hide": "^1.1.7",
     "use-sound": "^4.0.1",
     "zustand": "^4.4.7"
