--- a/WebApp/backend/QuizMaster.API.Gatewway/appsettings.json
+++ b/WebApp/backend/QuizMaster.API.Gatewway/appsettings.json
@@ -8,7 +8,9 @@
   "AllowedHosts": "*",
   "AppSettings": {
     "JWTSecret": "__SECRET_JWT_TESTING_PURPOSE__-2c0a94bf-9ab0-4432-993f-3c0f8234e180",
-    "IntExpireHour": 15
+    "IntExpireHour": 15,
+    "SMTP_EMAIL": "jabejar@fullscale.io", /* TEMP, WILL DELETE THE CRED IN FUTURE */
+    "SMTP_PASSWORD": "dzsw pzja rmzu axyq" /* TEMP, WILL DELETE THE CRED IN FUTURE */
   },
   "GrpcServerConfiguration": {
     "Account_Service": "https://localhost:7175",
