Ref: Urgent Link change to Gateway Hostname, for reset password

--- a/WebApp/backend/QuizMaster.API.Account/appsettings.json
+++ b/WebApp/backend/QuizMaster.API.Account/appsettings.json
@@ -14,6 +14,7 @@
     "RabbitMq_Account_RequestQueueName": "QuizMasterRequestQueue",
     "RabbitMq_Account_ResponseQueueName": "QuizMasterResponseQueue",
     "RabbitMq_Hostname": "localhost",
+    "GatewayHost": "https://localhost:7081",
     "Service_MonitoringGRPC": "https://localhost:7065",
     "SMTP_EMAIL": "jabejar@fullscale.io", /* TEMP, WILL DELETE THE CRED IN FUTURE */
     "SMTP_PASSWORD": "dzsw pzja rmzu axyq" /* TEMP, WILL DELETE THE CRED IN FUTURE */
