--- a/WebApp/frontend/quiz_session/package.json
+++ b/WebApp/frontend/quiz_session/package.json
@@ -16,6 +16,7 @@
     "@microsoft/signalr": "^8.0.0",
     "@tabler/icons": "^2.44.0",
     "@tabler/icons-react": "^2.44.0",
+    "axios": "^1.6.5",
     "file-loader": "^6.2.0",
     "next": "14.0.4",
     "react": "^18",
