--- a/WebApp/frontend/quiz-master/package.json
+++ b/WebApp/frontend/quiz-master/package.json
@@ -25,6 +25,7 @@
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "crypto-js": "^4.2.0",
         "eslint": "^8",
         "eslint-config-next": "13.5.6",
         "jwt-decode": "^3.1.2",
@@ -43,6 +44,7 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^14.0.0",
         "@testing-library/user-event": "^14.5.1",
+        "@types/crypto-js": "^4.2.2",
         "@types/react-beautiful-dnd": "^13.1.7",
         "autoprefixer": "^10.4.16",
         "eslint-plugin-jest-dom": "^5.1.0",
