--- a/WebApp/frontend/quiz_session/package.json
+++ b/WebApp/frontend/quiz_session/package.json
@@ -17,6 +17,7 @@
     "@tabler/icons": "^2.44.0",
     "@tabler/icons-react": "^2.44.0",
     "axios": "^1.6.5",
+    "crypto-js": "^4.2.0",
     "file-loader": "^6.2.0",
     "next": "14.0.4",
     "react": "^18",
