--- a/WebApp/frontend/quiz-master/.env
+++ b/WebApp/frontend/quiz-master/.env
@@ -1,4 +1,4 @@
-QUIZMASTER_GATEWAY=http://localhost:5000
+QUIZMASTER_GATEWAY=https://localhost:7081
 NEXTAUTH_SECRET=owhV4+EXpUePaS3k9Z+WqZybnURhBpsAlqw5EaLbPeQ=
 QUIZMASTER_QUIZ=owhV4+EXpUePaS3k9Z+WqZybnURhBpsAlqw5EaLbPeQ=
 QUIZMASTER_MEDIA=owhV4+EXpUePaS3k9Z+WqZybnURhBpsAlqw5EaLbPeQ=
