--- a/WebApp/frontend/quiz-master/package.json
+++ b/WebApp/frontend/quiz-master/package.json
@@ -22,6 +22,7 @@
         "@mantine/notifications": "^7.2.2",
         "@microsoft/signalr": "^8.0.0",
         "@mui/icons-material": "^5.14.18",
+        "@tanstack/react-query": "^5.22.2",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
