--- a/WebApp/frontend/quiz_session/package.json
+++ b/WebApp/frontend/quiz_session/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18",
     "react-use": "^17.4.2",
     "tailwind-scrollbar-hide": "^1.1.7",
+    "use-react-screenshot": "^4.0.0",
     "use-sound": "^4.0.1",
     "zustand": "^4.4.7"
   },
