Added CORS ORIGINS on Gateway's appsettings

--- a/WebApp/backend/QuizMaster.API.Gatewway/appsettings.json
+++ b/WebApp/backend/QuizMaster.API.Gatewway/appsettings.json
@@ -10,7 +10,14 @@
     "JWTSecret": "__SECRET_JWT_TESTING_PURPOSE__-2c0a94bf-9ab0-4432-993f-3c0f8234e180",
     "IntExpireHour": 15,
     "SMTP_EMAIL": "jabejar@fullscale.io", /* TEMP, WILL DELETE THE CRED IN FUTURE */
-    "SMTP_PASSWORD": "dzsw pzja rmzu axyq" /* TEMP, WILL DELETE THE CRED IN FUTURE */
+    "SMTP_PASSWORD": "dzsw pzja rmzu axyq", /* TEMP, WILL DELETE THE CRED IN FUTURE */
+    "CORS_ORIGINS": [
+      "http://localhost:5173",
+      "http://localhost:3000",
+      "http://localhost:3001",
+      "https://localhost:7081",
+      "https://central-notably-tadpole.ngrok-free.app/"
+    ]
   },
   "GrpcServerConfiguration": {
     "Account_Service": "https://localhost:7175",
