Feature: Manual Trigger Session and System Report by roomId where added

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,4 @@ packages/
 /WebApp/backend/QuizMaster.API.Gatewway/SystemData/System.db-wal
 /WebApp/backend/QuizMaster.API.QuizSession/sessionDb/QuizSession.db-shm
 /WebApp/backend/QuizMaster.API.QuizSession/sessionDb/QuizSession.db-wal
+WebApp/backend/QuizMaster.API.QuizSession/sessionDb/QuizSession.db
