--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,6 @@ packages/
 /WebApp/backend/QuizMaster.API.QuizSession/sessionDb/QuizSession.db-shm
 /WebApp/backend/QuizMaster.API.QuizSession/sessionDb/QuizSession.db-wal
 WebApp/backend/QuizMaster.API.QuizSession/sessionDb/QuizSession.db
+WebApp/backend/QuizMaster.API.Gatewway/SystemData/System.db
+WebApp/backend/QuizMaster.API.Media/MediaDatabase.sqlite
+WebApp/backend/QuizMaster.API.QuizSession/sessionDb/QuizSession.db
