--- a/WebApp/frontend/quiz_session/package.json
+++ b/WebApp/frontend/quiz_session/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.6.5",
     "crypto-js": "^4.2.0",
     "file-loader": "^6.2.0",
+    "jwt-decode": "^4.0.0",
     "next": "14.0.4",
     "react": "^18",
     "react-audio-player": "^0.17.0",
