MAJOR FIX AND FEATURES ADDED - trim answer when submitting - 1 answer for multiple choice - show answer before next question - fixed participant to submit answer - quiz end redirect to auth/code

--- a/WebApp/backend/QuizMaster.API.Gatewway/appsettings.json
+++ b/WebApp/backend/QuizMaster.API.Gatewway/appsettings.json
@@ -27,6 +27,10 @@
     "Media_Service": "https://localhost:7197",
     "Quiz_Category_Service": "https://localhost:7228",
     "Session_Service": "https://localhost:7230"
+  },
+  "QuizSettings": {
+    "ShowAnswerAfterQuestionDelay": 10,
+    "ForceNextRoundTimeout":  300
   }
 
 }
