--- a/WebApp/.env
+++ b/WebApp/.env
@@ -1,4 +1,4 @@
-HOST_IP=192.168.2.106
+HOST_IP=localhost
 HOST_PROTOCOL=http
 # DATABASE CONNECTION STRINGS
 BACKEND_ACCOUNT_CONN_STR=Server=mssql;Database=QuizMasterAccount;Trusted_Connection=False;TrustServerCertificate=True;User Id=sa;Password=MsSql123
@@ -8,7 +8,7 @@ BACKEND_QUIZ_CONN_STR=Server=mssql;Database=QuizMasterQuiz;Trusted_Connection=Fa
 BACKEND_SESSION_CONN_STR=Data Source=QuizSession.db
 
 # GATEWAY
-GATEWAY_CORS=http://192.168.2.106:3000;http://192.168.2.106:3001;http://192.168.2.106:5173;
+GATEWAY_CORS=http://localhost:3000;http://localhost:3001;http://localhost:5173;https://localhost:7081;
 
 # SESSION SETTINGS
 SHOW_ANSWER_AFTER_QUESTION_DELAY=10
