Production Fix - Fixed SignOut URL nav redirect to localhost - Fixed SignIn URL nav redirect to localhost - Fixed login redirect to localhost - Fixed Screenshot error - Added Authorization on Admin routes

--- a/WebApp/.env
+++ b/WebApp/.env
@@ -1,4 +1,4 @@
-HOST_IP=localhost
+HOST_IP=26.120.94.67
 HOST_PROTOCOL=http
 # DATABASE CONNECTION STRINGS
 BACKEND_ACCOUNT_CONN_STR=Server=mssql;Database=QuizMasterAccount;Trusted_Connection=False;TrustServerCertificate=True;User Id=sa;Password=MsSql123
@@ -8,7 +8,7 @@ BACKEND_QUIZ_CONN_STR=Server=mssql;Database=QuizMasterQuiz;Trusted_Connection=Fa
 BACKEND_SESSION_CONN_STR=Data Source=QuizSession.db
 
 # GATEWAY
-GATEWAY_CORS=http://localhost:3000;http://localhost:3001;http://localhost:5173;https://localhost:7081;
+GATEWAY_CORS=http://26.120.94.67:3000;http://26.120.94.67:3001;http://26.120.94.67:5173;https://26.120.94.67:7081;
 
 # SESSION SETTINGS
 SHOW_ANSWER_AFTER_QUESTION_DELAY=10
