Fixed QuizAdmin redirect to QuizSession BASE URL not localhost

--- a/WebApp/docker-compose.yml
+++ b/WebApp/docker-compose.yml
@@ -227,6 +227,7 @@ services:
     environment:
       - QUIZMASTER_SESSION=${HOST_PROTOCOL}://${HOST_IP}:3001
       - QUIZMASTER_GATEWAY=http://${HOST_IP}:7081
+      - QUIZMASTER_SESSION_WEBSITE=http://${HOST_IP}:3001
       - NEXTAUTH_URL=${HOST_PROTOCOL}://${HOST_IP}:3000/${NEXTAUTH_URL}
       - NEXTAUTH_SECRET=${NEXTAUTH_SECRET}
       - QUIZMASTER_MONITORING=https://${HOST_IP}:6004
