HEAVY DATABASE UPDATE TO QUIZ SESSION - UPDATED FROM SQLITE TO MSSQL

--- a/WebApp/.env
+++ b/WebApp/.env
@@ -5,7 +5,7 @@ BACKEND_ACCOUNT_CONN_STR=Server=mssql;Database=QuizMasterAccount;Trusted_Connect
 BACKEND_MEDIA_CONN_STR=Data Source=MediaDatabase.sqlite
 BACKEND_MONITORING_CONN_STR=Server=mssql;Database=QuizMasterMonitoring;Trusted_Connection=False;TrustServerCertificate=True;User Id=sa;Password=MsSql123
 BACKEND_QUIZ_CONN_STR=Server=mssql;Database=QuizMasterQuiz;Trusted_Connection=False;TrustServerCertificate=True;User Id=sa;Password=MsSql123
-BACKEND_SESSION_CONN_STR=Data Source=QuizSession.db
+BACKEND_SESSION_CONN_STR=Server=mssql;Database=QuizMasterSession;Trusted_Connection=False;TrustServerCertificate=True;User Id=sa;Password=MsSql123
 
 # GATEWAY
 GATEWAY_CORS=http://26.120.94.67:3000;http://26.120.94.67:3001;http://26.120.94.67:5173;https://26.120.94.67:7081;
