--- a/WebApp/backend/QuizMaster.API.QuizSession/appsettings.Development.json
+++ b/WebApp/backend/QuizMaster.API.QuizSession/appsettings.Development.json
@@ -12,6 +12,6 @@
     }
   },
   "ConnectionStrings": {
-    "QuizMasterQuizSessionDBConnectionString": "Data Source=sessionDb\\QuizSession.db"
+    "QuizMasterQuizSessionDBConnectionString": "Server=(localdb)\\mssqllocaldb;Database=QuizMasterSession;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
