--- a/WebApp/frontend/quiz-master/package.json
+++ b/WebApp/frontend/quiz-master/package.json
@@ -22,18 +22,22 @@
         "@mantine/notifications": "^7.2.2",
         "@microsoft/signalr": "^8.0.0",
         "@mui/icons-material": "^5.14.18",
+        "@react-pdf/renderer": "^3.3.8",
         "@tanstack/react-query": "^5.22.2",
         "@types/node": "^20",
         "@types/react": "^18",
+        "@types/react-csv": "^1.1.10",
         "@types/react-dom": "^18",
         "crypto-js": "^4.2.0",
         "eslint": "^8",
         "eslint-config-next": "13.5.6",
         "jwt-decode": "^3.1.2",
+        "moment": "^2.30.1",
         "next": "13.5.6",
         "next-auth": "^4.24.3",
         "react": "^18",
         "react-beautiful-dnd": "^13.1.1",
+        "react-csv": "^2.2.2",
         "react-dom": "^18",
         "react-export-table-to-excel": "^1.0.6",
         "react-hot-toast": "^2.4.1",
