Feature: Included OverrideQuestionTimer

--- a/WebApp/.env
+++ b/WebApp/.env
@@ -13,6 +13,9 @@ GATEWAY_CORS=http://26.120.94.67:3000;http://26.120.94.67:3001;http://26.120.94.
 # SESSION SETTINGS
 SHOW_ANSWER_AFTER_QUESTION_DELAY=10
 FORCE_NEXT_ROUND_TIMEOUT=300
+OVERRIDE_QUESTION_TIMER_TYPEANSWER=15
+OVERRIDE_QUESTION_TIMER_MULTIPLECHOICE=20
+OVERRIDE_QUESTION_TIMER_TRUEORFALSE=10
 
 # QUIZMASTER-ADMIN
 NEXTAUTH_URL=auth/login
