--- a/WebApp/backend/QuizMaster.API.Gatewway/appsettings.json
+++ b/WebApp/backend/QuizMaster.API.Gatewway/appsettings.json
@@ -30,7 +30,12 @@
   },
   "QuizSettings": {
     "ShowAnswerAfterQuestionDelay": 10,
-    "ForceNextRoundTimeout":  300
+    "ForceNextRoundTimeout": 120,
+    "OverrideQuestionTimer": {
+      "TypeAnswer": 0,
+      "MultipleChoice": 0,
+      "TrueOrFalse": 0
+    }
   }
 
 }
