--- a/WebApp/frontend/quiz-master/.env
+++ b/WebApp/frontend/quiz-master/.env
@@ -1,7 +1,7 @@
-BASE_URL=http://localhost:3000
-QUIZMASTER_GATEWAY=https://localhost:7081
-QUIZMASTER_SESSION_WEBSITE=http://localhost:3001
+BASE_URL=http://26.120.94.67:3000
+QUIZMASTER_GATEWAY=https://26.120.94.67:7081
+QUIZMASTER_SESSION_WEBSITE=http://26.120.94.67:3001
 NEXTAUTH_SECRET=owhV4+EXpUePaS3k9Z+WqZybnURhBpsAlqw5EaLbPeQ=
 QUIZMASTER_QUIZ=owhV4+EXpUePaS3k9Z+WqZybnURhBpsAlqw5EaLbPeQ=
 QUIZMASTER_MEDIA=owhV4+EXpUePaS3k9Z+WqZybnURhBpsAlqw5EaLbPeQ=
-QUIZMASTER_MONITORING=https://localhost:6004
+QUIZMASTER_MONITORING=https://26.120.94.67:6004
