changed HOST_IP in .env

--- a/WebApp/.env
+++ b/WebApp/.env
@@ -1,4 +1,4 @@
-HOST_IP=26.120.94.67
+HOST_IP=localhost
 HOST_PROTOCOL=http
 # DATABASE CONNECTION STRINGS
 BACKEND_ACCOUNT_CONN_STR=Server=mssql;Database=QuizMasterAccount;Trusted_Connection=False;TrustServerCertificate=True;User Id=sa;Password=MsSql123
