--- a/WebApp/frontend/quiz-master/package.json
+++ b/WebApp/frontend/quiz-master/package.json
@@ -33,6 +33,7 @@
         "eslint-config-next": "13.5.6",
         "jwt-decode": "^3.1.2",
         "moment": "^2.30.1",
+        "moment-timezone": "^0.5.45",
         "next": "13.5.6",
         "next-auth": "^4.24.3",
         "react": "^18",
