Fixed Homepage login/signup

--- a/WebApp/frontend/quiz-master/.env
+++ b/WebApp/frontend/quiz-master/.env
@@ -1,3 +1,4 @@
+NEXTAUTH_URL=http://26.120.94.67:3000
 BASE_URL=http://26.120.94.67:3000
 QUIZMASTER_GATEWAY=https://26.120.94.67:7081
 QUIZMASTER_SESSION_WEBSITE=http://26.120.94.67:3001
