--- a/WebApp/frontend/quiz_session/package.json
+++ b/WebApp/frontend/quiz_session/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@hello-pangea/dnd": "^16.5.0",
     "@mantine/core": "^7.3.2",
     "@mantine/hooks": "^7.3.2",
