Added Buffer Time

--- a/WebApp/backend/QuizMaster.API.Gatewway/appsettings.json
+++ b/WebApp/backend/QuizMaster.API.Gatewway/appsettings.json
@@ -31,6 +31,7 @@
   "QuizSettings": {
     "ShowAnswerAfterQuestionDelay": 10,
     "ForceNextRoundTimeout": 120,
+    "BufferTime":  3,
     "OverrideQuestionTimer": {
       "TypeAnswer": 0,
       "MultipleChoice": 0,
