--- a/WebApp/.env
+++ b/WebApp/.env
@@ -1,4 +1,4 @@
-HOST_IP=26.123.37.71
+HOST_IP=localhost
 HOST_PROTOCOL=http
 # DATABASE CONNECTION STRINGS
 BACKEND_ACCOUNT_CONN_STR=Server=mssql;Database=QuizMasterAccount;Trusted_Connection=False;TrustServerCertificate=True;User Id=sa;Password=MsSql123
@@ -8,14 +8,15 @@ BACKEND_QUIZ_CONN_STR=Server=mssql;Database=QuizMasterQuiz;Trusted_Connection=Fa
 BACKEND_SESSION_CONN_STR=Server=mssql;Database=QuizMasterSession;Trusted_Connection=False;TrustServerCertificate=True;User Id=sa;Password=MsSql123
 
 # GATEWAY
-GATEWAY_CORS=http://26.123.37.71:3000;http://26.123.37.71:3001;http://26.123.37.71:5173;https://26.123.37.71:7081;
+GATEWAY_CORS=http://localhost:3000;http://localhost:3001;http://localhost:5173;https://localhost:7081;
 
 # SESSION SETTINGS
 SHOW_ANSWER_AFTER_QUESTION_DELAY=10
 FORCE_NEXT_ROUND_TIMEOUT=300
-OVERRIDE_QUESTION_TIMER_TYPEANSWER=20
-OVERRIDE_QUESTION_TIMER_MULTIPLECHOICE=15
-OVERRIDE_QUESTION_TIMER_TRUEORFALSE=10
+OVERRIDE_QUESTION_TIMER_TYPEANSWER=25
+OVERRIDE_QUESTION_TIMER_MULTIPLECHOICE=20
+OVERRIDE_QUESTION_TIMER_TRUEORFALSE=15
+BUFFER_TIME=3
 
 
 # QUIZMASTER-ADMIN
