--- a/WebApp/frontend/quiz_session/.env
+++ b/WebApp/frontend/quiz_session/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_QUIZMASTER_ADMIN=http://26.123.37.71:3000
-NEXT_PUBLIC_QUIZMASTER_GATEWAY=https://26.123.37.71:7081
+NEXT_PUBLIC_QUIZMASTER_ADMIN=http://localhost:3000
+NEXT_PUBLIC_QUIZMASTER_GATEWAY=https://localhost:7081
