Hide question details during buffer time

--- a/WebApp/.env
+++ b/WebApp/.env
@@ -8,7 +8,7 @@ BACKEND_QUIZ_CONN_STR=Server=mssql;Database=QuizMasterQuiz;Trusted_Connection=Fa
 BACKEND_SESSION_CONN_STR=Server=mssql;Database=QuizMasterSession;Trusted_Connection=False;TrustServerCertificate=True;User Id=sa;Password=MsSql123
 
 # GATEWAY
-GATEWAY_CORS=http://localhost:3000;http://localhost:3001;http://localhost:5173;https://localhost:7081;
+GATEWAY_CORS=http://localhost:3000;http://localhost:3001;http://localhost:5173;https://localhost:7081;https://polliwog-measured-bulldog.ngrok-free.app
 
 # SESSION SETTINGS
 SHOW_ANSWER_AFTER_QUESTION_DELAY=10
