Fix: Adjustments on the UI Quiz Session

--- a/WebApp/frontend/quiz_session/package.json
+++ b/WebApp/frontend/quiz_session/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18",
     "react-use": "^17.4.2",
     "tailwind-scrollbar-hide": "^1.1.7",
+    "use-long-press": "^3.2.0",
     "use-sound": "^4.0.1",
     "zustand": "^4.4.7"
   },
