--- a/WebApp/frontend/quiz_session/.env
+++ b/WebApp/frontend/quiz_session/.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_QUIZMASTER_ADMIN=http://localhost:3000
 NEXT_PUBLIC_QUIZMASTER_GATEWAY=https://localhost:7081
+NEXT_PUBLIC_QUIZMASTER_TRIGGER_SFX_SECONDS=5
