Added Override points in for Easy, Average, Difficult and Clincher difficulties

--- a/WebApp/.env
+++ b/WebApp/.env
@@ -17,6 +17,11 @@ OVERRIDE_QUESTION_TIMER_TYPEANSWER=25
 OVERRIDE_QUESTION_TIMER_MULTIPLECHOICE=20
 OVERRIDE_QUESTION_TIMER_TRUEORFALSE=15
 BUFFER_TIME=3
+OVERRIDE_POINT_EASY_ROUND=1
+OVERRIDE_POINT_AVERAGE_ROUND=3
+OVERRIDE_POINT_DIFFICULT_ROUND=5
+OVERRIDE_POINT_CLINCHER_ROUND=5
+OVERRIDE_POINT_GENERAL=1
 
 
 # QUIZMASTER-ADMIN
