--- a/WebApp/backend/QuizMaster.API.Gatewway/appsettings.json
+++ b/WebApp/backend/QuizMaster.API.Gatewway/appsettings.json
@@ -31,11 +31,18 @@
   "QuizSettings": {
     "ShowAnswerAfterQuestionDelay": 10,
     "ForceNextRoundTimeout": 120,
-    "BufferTime":  3,
+    "BufferTime": 3,
     "OverrideQuestionTimer": {
       "TypeAnswer": 0,
       "MultipleChoice": 0,
       "TrueOrFalse": 0
+    },
+    "OverridePointSystem": {
+      "Easy": 1,
+      "Average": 3,
+      "Difficult": 5,
+      "Clincher": 5,
+      "GeneralPoints": 1
     }
   }
 
